Pretty much done. Falta persistence

--- a/ProgAvanzTarea1/Views/SupervisoresPage.xaml
+++ b/ProgAvanzTarea1/Views/SupervisoresPage.xaml
@@ -14,14 +14,14 @@
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
 
-            <TextBlock HorizontalAlignment="Right" Margin="0,10,10,0" TextWrapping="Wrap" MinHeight="50" MinWidth="50" Text="{x:Bind ViewModel.TextoAMostrar}" Grid.Column="1">
+            <TextBlock HorizontalAlignment="Right" Margin="0,10,10,0" TextWrapping="Wrap" MinHeight="50" MinWidth="50" Text="{x:Bind ViewModel.TextoAMostrar, Mode=TwoWay}" Grid.Column="1">
             </TextBlock>
-            <TextBox HorizontalAlignment="Left" Margin="160,95,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" Height="60" Width="281" Header="ID" PlaceholderText="Escribir Identificacion Aca"/>
-            <TextBox HorizontalAlignment="Left" Margin="160,303,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" Height="60" Width="281" Header="Nombre" PlaceholderText="EScriba Nombre aca"/>
-            <TextBox HorizontalAlignment="Left" Margin="160,173,0,0"   TextWrapping="Wrap" VerticalAlignment="Top" Height="60" Width="281" Header="Primer Apellido" PlaceholderText="Escriba Primer Apellido aca"/>
-            <TextBox HorizontalAlignment="Left" Margin="160,238,0,0"   TextWrapping="Wrap" VerticalAlignment="Top" Height="60" Width="281" Header="Segundo Apellido" PlaceholderText="Escriba Segundo aca"/>
-            <TextBox HorizontalAlignment="Left" Margin="160,368,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="60" Width="281" Header="Sucursal Asignada" PlaceholderText="Escriba Sucursal aca"/>
-            <Button Content="Agregar Supervisor " Margin="301,460,0,0" VerticalAlignment="Top" Width="140"/>
+            <TextBox HorizontalAlignment="Left" Margin="160,95,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" Height="60" Width="281" Header="ID" PlaceholderText="Escribir Identificacion Aca" Text="{x:Bind ViewModel.ID, Mode=TwoWay}"/>
+            <TextBox HorizontalAlignment="Left" Margin="160,173,0,0"   TextWrapping="Wrap" VerticalAlignment="Top" Height="60" Width="281" Header="Primer Apellido" PlaceholderText="Escriba Primer Apellido aca" Text="{x:Bind ViewModel.Apellido1, Mode=TwoWay}"/>
+            <TextBox HorizontalAlignment="Left" Margin="160,238,0,0"   TextWrapping="Wrap" VerticalAlignment="Top" Height="60" Width="281" Header="Segundo Apellido" PlaceholderText="Escriba Segundo aca" Text="{x:Bind ViewModel.Apellido2, Mode=TwoWay}"/>
+            <TextBox HorizontalAlignment="Left" Margin="160,303,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" Height="60" Width="281" Header="Nombre" PlaceholderText="Escriba Nombre aca" Text="{x:Bind ViewModel.Nombre, Mode=TwoWay}"/>
+            <TextBox HorizontalAlignment="Left" Margin="160,368,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="60" Width="281" Header="Sucursal Asignada" PlaceholderText="Escriba Sucursal aca" Text="{x:Bind ViewModel.Sucursal, Mode=TwoWay}"/>
+            <Button Content="Agregar Supervisor " Margin="301,460,0,0" VerticalAlignment="Top" Width="140" Command="{x:Bind ViewModel.NuevoSupervisor}"/>
             <!--
                 The SystemControlPageBackgroundChromeLowBrush background represents where you should place your content. 
                 Place your content here.
