--- a/ProgAvanzTarea1/Views/CategoriasPage.xaml
+++ b/ProgAvanzTarea1/Views/CategoriasPage.xaml
@@ -9,10 +9,12 @@
     <Grid x:Name="ContentArea" Margin="{StaticResource MediumLeftRightMargin}">
         <Grid
             Background="{ThemeResource SystemControlPageBackgroundChromeLowBrush}">
-            <!--
-                The SystemControlPageBackgroundChromeLowBrush background represents where you should place your content. 
-                Place your content here.
-            -->
+            <TextBlock HorizontalAlignment="Right" Margin="0,10,10,0" TextWrapping="Wrap" Text="{x:Bind ViewModel.TextoAMostrar, Mode=TwoWay}" Grid.Column="1"/>
+
+            <TextBox HorizontalAlignment="Left" Margin="160,95,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" Height="60" Width="281" Header="Codigo" PlaceholderText="Escribir Identificacion Aca" Text="{x:Bind ViewModel.Codigo, Mode=TwoWay}"/>
+            <TextBox HorizontalAlignment="Left" Margin="160,173,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" Height="60" Width="281" Header="Descripcion" PlaceholderText="Escriba Primer Apellido aca" Text="{x:Bind ViewModel.Descripcion, Mode=TwoWay}" />
+
+            <Button Content="Agregar Cajero " Margin="301,274,0,0" VerticalAlignment="Top" Width="140" Command="{x:Bind ViewModel.NuevoCajero}" />
         </Grid>
     </Grid>
 </Page>
