--- a/ProgAvanzTarea1/Views/ProductoPage.xaml
+++ b/ProgAvanzTarea1/Views/ProductoPage.xaml
@@ -9,10 +9,19 @@
     <Grid x:Name="ContentArea" Margin="{StaticResource MediumLeftRightMargin}">
         <Grid
             Background="{ThemeResource SystemControlPageBackgroundChromeLowBrush}">
-            <!--
-                The SystemControlPageBackgroundChromeLowBrush background represents where you should place your content. 
-                Place your content here.
-            -->
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock HorizontalAlignment="Right" Margin="0,10,10,0" TextWrapping="Wrap" MinHeight="50" MinWidth="50" Text="{x:Bind ViewModel.TextoAMostrar, Mode=TwoWay}" Grid.Column="1">
+            </TextBlock>
+            <TextBox HorizontalAlignment="Left" Margin="160,95,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" Height="60" Width="281" Header="Codigo" PlaceholderText="Escribir Identificacion Aca" Text="{x:Bind ViewModel.Codigo, Mode=TwoWay}"/>
+            <TextBox HorizontalAlignment="Left" Margin="160,173,0,0"   TextWrapping="Wrap" VerticalAlignment="Top" Height="60" Width="281" Header="Descripcion" PlaceholderText="Escriba Descripcion aca" Text="{x:Bind ViewModel.Descripcion, Mode=TwoWay}"/>
+            <TextBox HorizontalAlignment="Left" Margin="160,238,0,0"   TextWrapping="Wrap" VerticalAlignment="Top" Height="60" Width="281" Header="Precio" PlaceholderText="Escriba el precio aca" Text="{x:Bind ViewModel.Precio, Mode=TwoWay}"/>
+            <TextBox HorizontalAlignment="Left" Margin="160,303,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" Height="60" Width="281" Header="Cantidad" PlaceholderText="Escriba Cantidad aca" Text="{x:Bind ViewModel.Cantidad, Mode=TwoWay}"/>
+            <TextBox HorizontalAlignment="Left" Margin="160,368,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="60" Width="281" Header="Categoria" PlaceholderText="Escriba Codigo de Categoria aca" Text="{x:Bind ViewModel.Categoria, Mode=TwoWay}"/>
+            <Button Content="Agregar Produto " Margin="301,460,0,0" VerticalAlignment="Top" Width="140" Command="{x:Bind ViewModel.NuevoProducto}"/>
         </Grid>
     </Grid>
 </Page>
